@@ -1,3 +1,7 @@
+shmuel 28.01.2014 01:28:32 +0200 - build 275
+
+1. LuaFAR: работали скрипты с двумя BOM'ами (один удалял LuaFAR, второй - LuaJIT).
+
 shmuel 24.01.2014 20:19:11 +0200 - build 274
 
 1. LuaFAR: M#2572: far.MakeMenuItems: добавлять в таблицу не только строковое представление, но и сами объекты.
